--- a/contato.html
+++ b/contato.html
@@ -49,7 +49,7 @@
                     </div>
                     <h3>whatsapp</h3>
                     <p id="ele">Fale conosco pelo o Whatsapp.</p>
-                    <a href="https://api.whatsapp.com/message/YAELJOU3SJJGO1?autoload=1&app_absent=0" class="btn">Clique Aqui</a>
+                    <a href="https://api.whatsapp.com/message/YAELJOU3SJJGO1?autoload=1&app_absent=0" class="btn" target="_blank">Clique Aqui</a>
                 </li>
     
                 <li class="grid-5">
@@ -66,8 +66,9 @@
                         <img src="midias/insta_logo.png" alt="">
                     </div>
                     <h3>Instagram</h3>
-                    <p>Fale conosco pelo Instagram.</p>
-                    <p></p>
+                    <p id="apenas">Fale conosco pelo Instagram.</p>
+                    <a href="https://www.instagram.com/joaovictordoceria/" target="_blank" class="btn" id="insta">Clique Aqui</a>
+                
                 </li>
             </ul>
     </section>
