--- a/produtos.html
+++ b/produtos.html
@@ -210,7 +210,7 @@
         </div>
     </section>
 
-    <section class="produto_item miniscaseirinho container animar-interno">
+    <section class="produto_item miniscaseirinho container animar-interno" id="miniscaseirinho">
         <div class="grid-11">
             <img src="midias/montagem2.jpg" class="montagem" id="miniscaseirinho" alt="Bikcraft Passeio">
             <h2>SUPER-BOLOS</h2>
