--- a/contato.html
+++ b/contato.html
@@ -38,7 +38,7 @@
 
     <section class="contato1">
     <h1 class="titulo_contato">Gostou de nossos produtos?</h1>
-    <h2>Entre em contato conosco, diversas opções</h2>
+    <h2>Não Fique com vontade! Entre em contato agora!</h2>
     </section>
 
         <section class="opcoes">
